--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,5 @@
 {
   "title": "Vue 3 i18n",
-  "description": "A Vue i18n next example using vue-i18n-next"
+  "description": "A Vue i18n next example using vue-i18n-next",
+  "testNew:" "test new source string!"
 }
