--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -2,5 +2,6 @@
   "title": "Vue 3 i18n",
   "description": "A Vue i18n next example using vue-i18n-next",
   "testNew": "test new source string!",
-  "testNew2": "test new source string!"
+  "testNew2": "test new source string!",
+  "testAuto": "test auto source string!",
 }
