--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -3,5 +3,5 @@
   "description": "A Vue i18n next example using vue-i18n-next",
   "testNew": "test new source string!",
   "testNew2": "test new source string!",
-  "testAuto": "test auto source string!",
+  "testAuto": "test auto source string!"
 }
